# darailude

./: .darailude.init.ghci  .ghci  .gitignore  LICENSE  Makefile  darailude.cabal  ghci
env-setup/: EnvSetup.hs  env-setup.cabal
ghci/: GHCI.hs  ghci.cabal
ghci-load/: GHCILoad.hs
scratch/: JoinLattice.hs  Monoid.hs  Scratch.hs  Tables.hs
src/: Darkdown.hs  FP.hs  Main.hs
src/FP/: Compat.hs  Console.hs  Core.hs  Deriving.hs  Parser.hs  Prelude.hs  Pretty.hs  String.hs
src/FP/Deriving/: JoinLattice.hs  Lens.hs  Monoid.hs  Pretty.hs  Prism.hs
src/FP/Parser/: Mixfix.hs  Parser.hs  SExp.hs
src/FP/Prelude/: Compat.hs  Constraints.hs  Core.hs  DSL.hs  Effects.hs  Lattice.hs  Lens.hs  LensDeriving.hs  Lib.hs  Monads.hs  Morphism.hs  TemplateHaskell.hs
src/FP/Pretty/: Color.hs  Console.hs  HTML.hs  Pretty.hs  PrettyDeriving.hs
