author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Prelude
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                darailude
synopsis:            A Prelude replacement
version:             0.0.0.1
description:         A Prelude replacement
extra-source-files:  
  README.md 
  Makefile 
  env-setup/EnvSetup.hs
  ghci/GHCI.hs
  .ghci 
  .darailude.init.ghci 
  .darailude.reload.ghci

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base
    , containers 
    , directory
    , filepath
    , template-haskell 
    , text 
    , regex-tdfa
    , bytestring
  ghc-options: 
    -isrc
    -Wall 
    -fno-warn-orphans 
  default-extensions:  
    ConstraintKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns
    DataKinds
    TemplateHaskell
  exposed-modules:     
    FP
    FP.Compat
    FP.Console
    FP.Core
    FP.Deriving
    FP.Deriving.JoinLattice
    FP.Deriving.Lens
    FP.Deriving.Monoid
    FP.Deriving.Pretty
    FP.Deriving.Prism
    FP.Free
    FP.IO
    FP.Monads
    FP.Parser
    FP.Pretty
    FP.String
    FP.Tables
    FP.TH
