author:              David Darais
build-type:          Simple
cabal-version:       >=1.10
category:            Prelude
license-file:        LICENSE
license:             BSD3
maintainer:          david.darais@gmail.com
name:                darailude
synopsis:            A Prelude replacement
version:             0.0.0.1
description:         A Prelude replacement
extra-source-files:  
  README.md 
  Makefile 
  env-setup/EnvSetup.hs
  ghci/GHCI.hs
  .ghci 
  .darailude.init.ghci 
  .darailude.reload.ghci

library
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
      base
    , containers 
    , template-haskell 
    , text 
  ghc-options: 
    -isrc
    -Wall 
    -fno-warn-orphans 
  default-extensions:  
    ConstraintKinds
    DataKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns
  exposed-modules:     
    FP
    FP.Parser
    FP.Parser.Mixfix
    FP.Parser.Parser
    FP.Parser.SExp
    FP.Prelude
    FP.Prelude.Compat
    FP.Prelude.Constraints
    FP.Prelude.Core
    FP.Prelude.DSL
    FP.Prelude.Effects
    FP.Prelude.Lattice
    FP.Prelude.Lens
    FP.Prelude.LensDeriving
    FP.Prelude.Lib
    FP.Prelude.Monads
    FP.Prelude.Morphism
    FP.Prelude.TemplateHaskell
    FP.Pretty
    FP.Pretty.Color
    FP.Pretty.Console
    FP.Pretty.HTML
    FP.Pretty.Pretty
    FP.Pretty.PrettyDeriving

executable examples
  build-depends: darailude
  main-is: src/Main.hs
  default-extensions:  
    ConstraintKinds
    DataKinds
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImpredicativeTypes
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NoImplicitPrelude
    OverloadedStrings
    PartialTypeSignatures
    PolyKinds
    PostfixOperators
    RankNTypes
    RebindableSyntax
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    UnicodeSyntax
    ViewPatterns
