name:                env-setup
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              David Darais
maintainer:          david.darais@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable env-setup
  main-is:             EnvSetup.hs
  build-depends:       base, directory, Cabal 
  default-language:    Haskell2010
